Closed
Bug 350081
Opened 19 years ago
Closed 19 years ago
ASSERTION: invalid number of columns
Categories
(Core :: Layout: Tables, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: bernd_mozilla, Assigned: bernd_mozilla)
References
Details
(Keywords: fixed1.8.0.7, fixed1.8.1, testcase)
Attachments
(3 files, 1 obsolete file)
|
443 bytes,
text/html
|
Details | |
|
476 bytes,
text/html
|
Details | |
|
9.46 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
dveditz
:
approval1.8.0.7+
beltzner
:
approval1.8.1+
|
Details | Diff | Splinter Review |
see testcase
Attachment #235281 -
Flags: superreview?(bzbarsky)
Attachment #235281 -
Flags: review?(bzbarsky)
Updated•19 years ago
|
Attachment #235281 -
Flags: superreview?(bzbarsky)
Attachment #235281 -
Flags: superreview+
Attachment #235281 -
Flags: review?(bzbarsky)
Attachment #235281 -
Flags: review+
The change from the previous patch also needs to be done in AppendCells.
Attachment #235281 -
Attachment is obsolete: true
Attachment #235538 -
Flags: superreview?(bzbarsky)
Attachment #235538 -
Flags: review?(bzbarsky)
Attachment #235538 -
Flags: approval1.8.1?
Boris if you could propose a better name I am happy to follow.
Comment on attachment 235538 [details] [diff] [review]
revised patch
this revises the patch for bug 347725
Attachment #235538 -
Flags: approval1.8.0.7?
Comment 7•19 years ago
|
||
Comment on attachment 235538 [details] [diff] [review]
revised patch
Thanks for working on this! Clearing 1.8.1 flags since reviews are not complete. Please get the reviews complete, land on trunk, and then re-request 1.8.1 approval.
Attachment #235538 -
Flags: approval1.8.1?
Comment 8•19 years ago
|
||
Comment on attachment 235538 [details] [diff] [review]
revised patch
>Index: nsTableFrame.cpp
>+nsTableFrame::MatchCellMapToColCache()
>+{
>+ nsTableCellMap* cellMap = GetCellMap();
Why get it up front here instead of where it's needed?
Either move this to the one spot in this function where we use it, or pass an nsTableCellMap as an arg.
r+sr=bzbarsky with that
Comment 9•19 years ago
|
||
Comment on attachment 235538 [details] [diff] [review]
revised patch
approved for 1.8.0 branch, a=dveditz for drivers with bz's comment incorporated
Attachment #235538 -
Flags: approval1.8.0.7? → approval1.8.0.7+
| Assignee | ||
Comment 10•19 years ago
|
||
fixed on trunk with bz comment (I went for the arg)
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 11•19 years ago
|
||
Comment on attachment 235538 [details] [diff] [review]
revised patch
I would like to take this onto 1.8.1 too
Attachment #235538 -
Flags: approval1.8.1?
Keywords: fixed1.8.0.7
Comment 12•19 years ago
|
||
Comment on attachment 235538 [details] [diff] [review]
revised patch
a=beltzner for 1.8.1drivers with bz's comments incorporated.
Attachment #235538 -
Flags: approval1.8.1? → approval1.8.1+
Updated•19 years ago
|
Attachment #235538 -
Flags: superreview?(bzbarsky)
Attachment #235538 -
Flags: superreview+
Attachment #235538 -
Flags: review?(bzbarsky)
Attachment #235538 -
Flags: review+
You need to log in
before you can comment on or make changes to this bug.
Description
•