match the numer of columnss in the cellmap and the col cache bug 350081 r/sr=bzbarsky