layout/tables/nsTableFrame.h
@@ -475,6 +475,7 @@ public:
                                 nsIFrame*             aPrevCol,
                                 nsIFrame**            aFirstNewFrame);
 
+  void MatchCellMapToColCache(nsTableCellMap* aCellMap);
   /** empty the column frame cache */
   void ClearColCache();
 
